--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,19 @@ header {
   background-color: #219c90;
 }
 
+.loading-message{
+  display: none;
+  position : fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1rem;
+  font-weight: 600;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  
+}
+
 /* ===============
    Task Cards
 ================ */
