--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,18 @@ header {
   font-weight: 600;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  
+}
+
+.error-message {
+  position:fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1rem;
+  font-weight: 600;
+  color: #ea5555; /* Error color */
+  display:none;
+  z-index: 1000;
 }
 
 /* ===============
