--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,36 @@ header {
   display:none;
   z-index: 1000;
 }
+.button-group {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px; /* Space above button group */
+}
+.submit-btn,
+.delete-btn{
+  flex: 1;
+  text-align: center;
+  height: 40px;
+  color: white;
+  border-radius: 30px;
+  border: none;
+  font-size: 16px;
+  padding: 0 20px;
+  font-weight: 600;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.delete-btn{
+  background-color: #ea5555; /* Red color for delete button */
+
+}
+.submit-btn{
+  background-color: var(--primary-btn-color); /* Primary button color */
+  
+}
 
 /* ===============
    Task Cards
