--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,8 @@ h4 {
 
 /* When the checkbox is checked, change the track color and move the knob */
 .switch input:checked + .slider.round {
-  background-color: var(--primary-btn-color
+  background-color: var(
+    --primary-btn-color
   ); /* Change track color when checked */
 }
 .switch input:checked + .slider.round::before {
@@ -195,6 +196,10 @@ h4 {
 
 .slider.round {
   border-radius: 12px; /* Rounded track */
+}
+
+[data-theme="dark"].slider.round {
+  background-color: #000000;
 }
 
 .theme-icon {
@@ -223,7 +228,7 @@ h4 {
 }
 
 /*Button turns puple with white text in dark mode*/
- .hide-sidebar-btn {
+[data-theme="dark"] .hide-sidebar-btn {
   background-color: var(--primary-btn-color);
   color: #fff; /* White text in dark mode */
 }
